# blobert-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: ticket-analyzer.md
.claude/hooks/: verify-ticket-completion.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  decisions.md  exploration-tree.md  journal.md  llm-forces.md  mcp-spec.md  testing-strategy.md
src/blobert_mcp/: __init__.py  emulator.py  server.py
tests/: test_smoke.py
tests/domain/: test_bank_info.py  test_buttons.py  test_interrupts.py  test_io_registers.py  test_kb.py  test_kb_import.py  test_memory.py  test_memory_diff.py  test_memory_map.py  test_registers.py  test_rom_header.py  test_search.py  test_vectors.py
tests/kb/: test_database.py
tests/tools/: test_disasm.py  test_dynamic.py  test_io_registers.py  test_kb.py  test_memory_diff.py  test_memory_write.py  test_search.py  test_tools.py
tests/utils/: test_hexdump.py
tickets/: TEMPLATE.md
tickets/backlog/: BLO-001.md  BLO-002.md  BLO-003.md  BLO-004.md  BLO-005.md  BLO-006.md  BLO-007.md  BLO-008.md  BLO-009.md  BLO-012.md  BLO-013.md  BLO-014.md  BLO-015.md  BLO-016.md  BLO-017.md  BLO-020.md  BLO-021.md  BLO-022.md  BLO-026.md  BLO-027.md  BLO-028.md  BLO-029.md  BLO-030.md  BLO-031.md  BLO-032.md  BLO-033.md  BLO-034.md  BLO-035.md  BLO-036.md  (+36 more)
(+105 files in other folders)
