[project]
name = "blobert-mcp"
version = "0.1.0"
description = "MCP server for LLM-assisted Game Boy ROM decompilation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyboy>=2.0.0",
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
blobert-mcp = "blobert_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blobert_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
